# ibis-bench

./: .gitignore  README.md  analysis.html  analysis.ipynb  analysis.qmd  app.py  big.sh  copy-tpch.py  dev-app.py  dev-requirements.txt  dev-tpcds-ibis.ipynb  eda.qmd  ibis-dev.ipynb  index.html  justfile  polars-dev.ipynb  pyproject.toml  requirements.txt  results.py  run.py  run.sh  search.json  sql-dev.ipynb  vm-bootstrap-1.py  vm-bootstrap-2.py  vm-bootstrap.sh
.github/workflows/: cicd.yaml
notebooks/: analysis.ipynb  ibis-dev.ipynb
notebooks/ds/: ibis.qmd
notebooks/h/: ibis.qmd  polars.qmd  sql.qmd
pages/: instance_type_details.py  methodology.py
site_libs/bootstrap/: bootstrap.min.css
src/ibis_bench/: cli.py  cli2.py
src/ibis_bench/queries/: ibis.py  polars.py  sql.py
src/ibis_bench/tpcds/: gen_data.py  read_data.py
src/ibis_bench/tpcds/queries/: ibis.py  polars.py  sql.py
src/ibis_bench/tpcds/utils/: monitor.py  read_data.py  write_data.py
src/ibis_bench/tpch/: gen_data.py  read_data.py
src/ibis_bench/tpch/queries/: ibis.py  polars.py
src/ibis_bench/tpch/utils/: logging.py  read_data.py
src/ibis_bench/utils/: gen_data.py  logging.py  monitor.py  read_data.py  write_data.py
website/: _quarto.yml  analysis.qmd  analysis.quarto_ipynb  index.qmd
