[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "ibis-bench"
version = "0.2.0"
authors = [{ name = "Cody", email = "cody@dkdc.dev" }]
description = "benchmarking with Ibis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # data stuff
    'duckdb==1.0.0',
    'polars==1.5.0',
    'datafusion==40.1.0',
    'ibis-framework',     #  @ git+https://github.com/ibis-project/ibis',
    # other stuff
    'typer',
    'python-dotenv',
    'psutil',
    'gcsfs',
    'plotly',
    'kaleido',
    'streamlit',
    'great-tables',
]

[project.urls]
"Homepage" = "https://github.com/lostmygithubaccount/ibis-bench"
"Bug Tracker" = "https://github.com/lostmygithubaccount/ibis-bench/issues"

[project.scripts]
bench = "ibis_bench.cli:app"
bench2 = "ibis_bench.cli2:app"

[tool.ruff]
extend-include = ["*.ipynb"]
